# wakanda-whisper

./: .gitignore  LICENSE  README.md  pyproject.toml
Wakanda-asr-demo/: README.md  app.py  app_demo.py  requirements.txt
wakanda_whisper/: __init__.py  base.py  decode.py  languages.py  version.py
